<?xml version="1.0" encoding="utf-8"?>

<resources>
    <string name="app_name">pianoj</string>
    <string name="grandpiano">grandpiano</string>
    <string name="brightpiano">brightpiano</string>
    <string name="classicalpiano">classicalpiano</string>
    <string name="closedpiano">closedpiano</string>
    <string name="softpiano">softpiano</string>
    <string name="rodspiano">rodspiano</string>


    <string name="Mlogo_description">Go to M</string>
    <string name="back_button_description">Go back to the previous screen</string>
    <string name="Record_description">Start recording</string>
    <string name="Cat_description">Go to categories</string>
    <string name="Sustain_description">Enable sustain</string>
    <string name="Menu_description">Go to menus</string>
    <!-- Octave 1 -->
        <string name="key_C1">C1</string>
        <string name="key_D1">D1</string>
        <string name="key_E1">E1</string>
        <string name="key_F1">F1</string>
        <string name="key_G1">G1</string>
        <string name="key_A1">A1</string>
        <string name="key_B1">B1</string>

        <!-- Octave 2 -->
        <string name="key_C2">C2</string>
        <string name="key_D2">D2</string>
        <string name="key_E2">E2</string>
        <string name="key_F2">F2</string>
        <string name="key_G2">G2</string>
        <string name="key_A2">A2</string>
        <string name="key_B2">B2</string>

        <!-- Octave 3 -->
        <string name="key_C3">C3</string>
        <string name="key_D3">D3</string>
        <string name="key_E3">E3</string>
        <string name="key_F3">F3</string>
        <string name="key_G3">G3</string>
        <string name="key_A3">A3</string>
        <string name="key_B3">B3</string>

        <!-- Octave 4 -->
        <string name="key_C4">C4</string>
        <string name="key_D4">D4</string>
        <string name="key_E4">E4</string>
        <string name="key_F4">F4</string>
        <string name="key_G4">G4</string>
        <string name="key_A4">A4</string>
        <string name="key_B4">B4</string>

        <!-- Octave 5 -->
        <string name="key_C5">C5</string>
        <string name="key_D5">D5</string>
        <string name="key_E5">E5</string>
        <string name="key_F5">F5</string>
        <string name="key_G5">G5</string>
        <string name="key_A5">A5</string>
        <string name="key_B5">B5</string>

        <!-- Octave 6 -->
        <string name="key_C6">C6</string>
        <string name="key_D6">D6</string>
        <string name="key_E6">E6</string>
        <string name="key_F6">F6</string>
        <string name="key_G6">G6</string>
        <string name="key_A6">A6</string>
        <string name="key_B6">B6</string>

        <!-- Octave 7 -->
        <string name="key_C7">C7</string>
        <string name="key_D7">D7</string>
        <string name="key_E7">E7</string>
        <string name="key_F7">F7</string>
        <string name="key_G7">G7</string>
        <string name="key_A7">A7</string>
        <string name="key_B7">B7</string>

    <string name="startbutton">start</string>

</resources>
